// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingPopoverContent Component > 应该正确渲染有 API key 的状态 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <h3
      class="font-medium text-slate-800 dark:text-slate-200 text-sm"
    >
      API Key Setting
    </h3>
    <div
      class="relative"
    >
      <input
        class="flex h-9 w-full rounded-md border border-input px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pr-20 false bg-slate-100 dark:bg-slate-800 text-slate-800 dark:text-slate-200 placeholder-slate-500 dark:placeholder-slate-400 cursor-pointer"
        placeholder="OpenAI API Key"
        readonly=""
        type="password"
        value="test-api-key"
      />
      <div
        class="absolute right-2 top-1/2 -translate-y-1/2 flex items-center gap-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-8 w-8 text-slate-500 hover:text-slate-900"
          data-testid="eye-icon"
        >
          <svg
            class="lucide lucide-eye h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-6 w-6 text-slate-500 hover:text-slate-900 relative"
          data-testid="copy-icon-group"
        >
          <div
            class="absolute inset-0 flex items-center justify-center"
            style="opacity: 1; transform: none;"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <button
      aria-autocomplete="none"
      aria-controls="radix-:r8:"
      aria-expanded="false"
      class="flex h-9 items-center justify-between whitespace-nowrap rounded-md border border-input px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full bg-slate-100 dark:bg-slate-800 text-slate-800 dark:text-slate-200"
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        GPT-4o
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="space-y-4 !mt-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm font-medium"
        >
          Temperature
        </span>
        <span
          class="text-sm tabular-nums font-medium"
          style="opacity: 0; transform: translateY(-10px);"
        >
          0.7
        </span>
      </div>
      <div
        class="relative !mt-2"
      >
        <span
          aria-disabled="false"
          class="relative flex w-full touch-none select-none items-center"
          data-orientation="horizontal"
          dir="ltr"
          style="--radix-slider-thumb-transform: translateX(-50%);"
        >
          <span
            class="relative h-1.5 w-full grow overflow-hidden rounded-full bg-primary/20 bg-[#e5e7eb] dark:bg-[#2e3238]"
            data-orientation="horizontal"
          >
            <span
              class="absolute h-full bg-primary bg-[#8b5cf6] dark:bg-[#a78bfa]"
              data-orientation="horizontal"
              style="left: 0%; right: 65%;"
            />
          </span>
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(35% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="2"
              aria-valuemin="0"
              aria-valuenow="0.7"
              class="block h-4 w-4 rounded-full border border-[#e5e7eb] dark:border-[#2e3238] border-primary/50 bg-background shadow transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 focus-visible:ring-[#8b5cf6]"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style=""
              tabindex="0"
            />
          </span>
        </span>
        <div
          class="flex justify-between mt-2 text-muted-foreground"
        >
          <span>
            Precise
          </span>
          <span>
            Balance
          </span>
          <span>
            Creative
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow h-9 px-4 py-2 flex-1 text-white disabled:bg-slate-300 dark:disabled:bg-slate-700 bg-[#8b5cf6] hover:bg-[#7c3aed] dark:bg-[#a78bfa] dark:hover:bg-[#9061f9]"
        data-testid="save-icon"
      >
        Save
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-background shadow-sm h-9 w-9 border-[#f87171] dark:border-[#ef4444] text-[#ef4444] dark:text-[#f87171] hover:bg-[#fee2e2] dark:hover:bg-[#450a0a]/20 hover:text-[#dc2626] dark:hover:text-[#ef4444]"
        data-testid="delete-api-icon"
      >
        <svg
          class="lucide lucide-trash2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 6h18"
          />
          <path
            d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
          />
          <path
            d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
          />
          <line
            x1="10"
            x2="10"
            y1="11"
            y2="17"
          />
          <line
            x1="14"
            x2="14"
            y1="11"
            y2="17"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`SettingPopoverContent Component > 应该正确渲染没有 API key 的状态 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <h3
      class="font-medium text-slate-800 dark:text-slate-200 text-sm"
    >
      API Key Setting
    </h3>
    <div
      class="text-red-500 flex items-center"
    >
      <svg
        class="lucide lucide-triangle-alert h-3 w-3 mr-1"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      Please set API key
    </div>
    <div
      class="relative"
    >
      <input
        class="flex h-9 w-full rounded-md border border-input px-3 py-1 text-base shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pr-10 false bg-slate-100 dark:bg-slate-800 text-slate-800 dark:text-slate-200 placeholder-slate-500 dark:placeholder-slate-400 cursor-pointer"
        placeholder="OpenAI API Key"
        readonly=""
        type="password"
        value=""
      />
      <div
        class="absolute right-2 top-1/2 -translate-y-1/2 flex items-center gap-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-8 w-8 text-slate-500 hover:text-slate-900"
          data-testid="eye-icon"
        >
          <svg
            class="lucide lucide-eye h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
        </button>
      </div>
    </div>
    <button
      aria-autocomplete="none"
      aria-controls="radix-:r0:"
      aria-expanded="false"
      class="flex h-9 items-center justify-between whitespace-nowrap rounded-md border border-input px-3 py-2 text-sm shadow-sm ring-offset-background data-[placeholder]:text-muted-foreground focus:outline-none focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full bg-slate-100 dark:bg-slate-800 text-slate-800 dark:text-slate-200"
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        GPT-4o
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="space-y-4 !mt-3"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-sm font-medium"
        >
          Temperature
        </span>
        <span
          class="text-sm tabular-nums font-medium"
          style="opacity: 0; transform: translateY(-10px);"
        >
          0.7
        </span>
      </div>
      <div
        class="relative !mt-2"
      >
        <span
          aria-disabled="false"
          class="relative flex w-full touch-none select-none items-center"
          data-orientation="horizontal"
          dir="ltr"
          style="--radix-slider-thumb-transform: translateX(-50%);"
        >
          <span
            class="relative h-1.5 w-full grow overflow-hidden rounded-full bg-primary/20 bg-[#e5e7eb] dark:bg-[#2e3238]"
            data-orientation="horizontal"
          >
            <span
              class="absolute h-full bg-primary bg-[#8b5cf6] dark:bg-[#a78bfa]"
              data-orientation="horizontal"
              style="left: 0%; right: 65%;"
            />
          </span>
          <span
            style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(35% + 0px);"
          >
            <span
              aria-orientation="horizontal"
              aria-valuemax="2"
              aria-valuemin="0"
              aria-valuenow="0.7"
              class="block h-4 w-4 rounded-full border border-[#e5e7eb] dark:border-[#2e3238] border-primary/50 bg-background shadow transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 focus-visible:ring-[#8b5cf6]"
              data-orientation="horizontal"
              data-radix-collection-item=""
              role="slider"
              style=""
              tabindex="0"
            />
          </span>
        </span>
        <div
          class="flex justify-between mt-2 text-muted-foreground"
        >
          <span>
            Precise
          </span>
          <span>
            Balance
          </span>
          <span>
            Creative
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 shadow h-9 px-4 py-2 flex-1 text-white disabled:bg-slate-300 dark:disabled:bg-slate-700 bg-[#8b5cf6] hover:bg-[#7c3aed] dark:bg-[#a78bfa] dark:hover:bg-[#9061f9]"
        data-testid="save-icon"
        disabled=""
      >
        Save
      </button>
    </div>
  </div>
</div>
`;
